fixed shift

--- a/src/www/style.css
+++ b/src/www/style.css
@@ -202,6 +202,8 @@ small {
 
 .leftsidebar {
     float: left;
+    width: 250px;
+    height: 500px;
 }
 
 .sidebar span {
